Thu Aug 21 13:21:45 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/drb/acl.rb: split executable code into sample directory.
	* sample/drb/acl.rb: ditto.

Thu Aug 21 12:55:35 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .gitignore: ignored temporary file for Changelog.
	  http://mkosaki.blog46.fc2.com/blog-entry-1284.html

Thu Aug 21 12:40:22 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/net/imap.rb: split executable code into sample directory.
	* sample/net-imap.rb: ditto.

Thu Aug 21 12:23:56 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/net/imap.rb: removed commented-out code.

Wed Aug 20 17:27:02 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_TRY_CFLAGS, RUBY_TRY_LDFLAGS),
	  (RUBY_CHECK_BUILTIN_SETJMP, RUBY_SETJMP_TYPE),
	  (RUBY_STACK_GROW_DIRECTION): quote defun names, for some
	  versions of autoconf possibly.  [ruby-core:64473] [Bug #10156]

Tue Aug 19 22:28:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): fix condition to round.
	  [ruby-core:64454] [Bug #10151]

Tue Aug 19 22:22:45 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/trans/euckr-tbl.rb (EUCKR_TO_UCS_TBL): add missing euro and
	  registered signs.  [ruby-core:64452] [Bug #10149]

Tue Aug 19 13:59:43 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compar.c (rb_cmperr): preserve encodings of arguments in the
	  message.

Tue Aug 19 10:13:23 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/thread/thread.c (get_array): check instance variables are
	  initialized properly.  [ruby-core:63826][Bug #10062]

Mon Aug 18 17:06:27 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): support rational 'f' format.
	  [ruby-core:64382] [Bug #10136]

Mon Aug 18 08:03:46 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* spec/default.mspec: use 2.2 definition.

Sun Aug 17 19:41:40 2014  Kazuki Tsujimoto  <kazuki@callcc.net>
